Hemos creado la funcionabilidad Guardar Producto y Logger para la Clase ProductoController

--- a/src/main/resources/templates/administrador/home.html
+++ b/src/main/resources/templates/administrador/home.html
@@ -40,7 +40,7 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <p class="card-text">Nombre de la Opcion.</p>
+              <p class="card-text">Nombre del Servicio.</p>
             </div>
             <div class="card-footer">
               <a href="productohome.html" class="btn btn-success">Ver Servicio</a>
