--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -2,29 +2,32 @@
   <div th:fragment="header">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	    <div class="container">
-	      <a class="navbar-brand" href="#">La Cumbre - Venta en Linea</a>
+			<!--/administrador - le pedimos redireccione al administrador-->
+	      <a class="navbar-brand" th:href="@{/administrador}">La Cumbre - Venta en Linea</a>
 
-	      <form class="form-inline my-2 my-lg-0" method="post" action="#">
-	      <input class="form-control mr-sm-2" type="search"
-	      placeholder="Buscar" aria-label="Search" name="nombre"
-	      autocomplete="off">
-	      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-	    </form>
+	    	<form class="form-inline my-2 my-lg-0" method="post" action="#">
+	      		<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="nombre" autocomplete="off">
+	      		<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+	    	</form>
 
-
-	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-	      <span class="navbar-toggler-icon"></span>
-	    </button>
-	    <div class="collapse navbar-collapse" id="navbarResponsive">
-	      <ul class="navbar-nav ml-auto">
-	        <li class="nav-item"><a class="nav-link"
-	          href="carrito.html">Carrito</a></li>
-	          <li class="nav-item"><a class="nav-link"
-	            href="login.html">Login</a></li>
-	          </ul>
-	        </div>
-	      </div>
-	    </nav>
+	    	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" 
+				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="navbar-toggler-icon"></span>
+	    	</button>
+	    	<div class="collapse navbar-collapse" id="navbarResponsive">
+	    		<ul class="navbar-nav ml-auto">
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" 
+							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> ADMIN 
+						</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<a class="dropdown-item" th:href="@{/productos}">Productos</a> 
+						</div>
+			    	</li>
+	        	</ul>
+	    	</div>
+		</div>
+	</nav>
   </div>
 	
   <!-- Footer -->
