--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -26,16 +26,16 @@
 
   <!-- Page Heading/Breadcrumbs -->
   <h1 class="mt-4 mb-3">
-    Spring eCommerce <small>Productos</small>
+    La Cumbre eCommerce <small>- Planes de Servicios</small>
   </h1>
 
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-    <li class="breadcrumb-item active">Ver Productos</li>
+    <li class="breadcrumb-item active">Ver Planes de Servicios</li>
   </ol>
 
-  <a class="btn btn-primary" href="#" > Crear Producto</a>
-  <h2>Productos</h2>
+  <a class="btn btn-primary" th:href="@{/productos/create}" >Crear Planes de Servicios</a>
+  <h2>Planes de Servicios</h2>
   <table class="table">
     <thead>
       <tr>
