--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -21,40 +21,18 @@
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Spring eCommerce</a>
-
-      <form class="form-inline my-2 my-lg-0" method="post"
-      action="#">
-      <input class="form-control mr-sm-2" type="search"
-      placeholder="Buscar" aria-label="Search" name="nombre"
-      autocomplete="off">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link"
-          href="carrito.html">Carrito</a></li>
-          <li class="nav-item"><a class="nav-link"
-            href="login.html">Login</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <!-- Navigation - Aqui pondremos el HEADER de Template_usuario.html-->
+  <div th:include="usuario/template_usuario.html::header">
+	
+  </div>
 
     <!-- Page Content -->
     <div class="container">
 
       <!-- Jumbotron Header -->
       <header class="jumbotron my-4">
-        <h1 class="display-3">Bienvenido a la Interfaz del Usuario</h1>
-        <p class="lead">Modicica o Elimina los Planes en Línea</p>
+        <h1 class="display-3">Bienvenido Estimado Usuario a La Cumbre</h1>
+        <p class="lead">Escoge el Plan mas conveniente para TI</p>
       </header>
 
       <!-- Pagina de Vista de Productos que se Renderiza segun el numero de Productos existan en la BDD -->
@@ -77,13 +55,11 @@
     </div>
     <!-- /.container -->
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+    <!-- Footer aqui pondremos el FOOTER de Template_usuario.html-->
+	  <div th:include="usuario/template_usuario.html::footer">
+		
+	  </div>
+
 
 	<!-- Bootstrap core JavaScript - ojo agrega th: y @{ } para indicar q esta en thymeleaf-->
 	   <script th:src="@{vendor/jquery/jquery.min.js}"></script>
