--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -20,7 +20,8 @@
 	  	<!-- Navigation -->
   		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     		<div class="container">
-      			<a class="navbar-brand" href="#">Spring eCommerce</a>
+				<!--Me llevara a HomeController con {/}-->
+      			<a class="navbar-brand" th:href="@{/}">La Cumbre eCommerce</a>
 
       			<form class="form-inline my-2 my-lg-0" method="post" action="#">
       				<input class="form-control mr-sm-2" type="search" placeholder="Buscar" 
