mostramos la Informacion del Usuario y el detalle en la Orden de Compra del Carrito en la Vista de resumenorden

--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -28,7 +28,7 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Producto</small>
+        LaCumbre eCommerce <small>Planes de Servicio</small>
       </h1>
 
       <ol class="breadcrumb">
