--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -20,10 +20,11 @@
 	  	<!-- Navigation -->
   		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     		<div class="container">
-				<!--Me llevara a HomeController con {/}-->
+				<!--Me llevara a Home de la web con {/}-->
       			<a class="navbar-brand" th:href="@{/}">La Cumbre eCommerce</a>
 
-      			<form class="form-inline my-2 my-lg-0" method="post" action="#">
+				<!--Mapeo este formulario al Metodo /search del HomeController en el action-->
+      			<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
       				<input class="form-control mr-sm-2" type="search" placeholder="Buscar" 
 						aria-label="Search" name="nombre" autocomplete="off">
       				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
