--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -30,7 +30,7 @@
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Spring eCommerce <small>Carrito</small>
+        LaCumbre eCommerce <small>Carrito</small>
       </h1>
 
       <ol class="breadcrumb">
