--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -21,7 +21,8 @@
 							data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> ADMIN 
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-							<a class="dropdown-item" th:href="@{/productos}">Productos</a> 
+							<a class="dropdown-item" th:href="@{/productos}">Productos</a>
+							<a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a>
 						</div>
 			    	</li>
 	        	</ul>
